--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
